rewrite KubeJSResourcePack and its server/client subclass, allow adding non-json data